--- a/lepiter/lepiter.properties
+++ b/lepiter/lepiter.properties
@@ -1,5 +1,6 @@
 {
 	"uuid" : "4a5b1634-5ee3-0d00-af89-041a06e03ac0",
 	"tableOfContents" : "6lsypv7p3kexfc4nybhz1zsg9",
-	"schema" : "4.1"
+	"schema" : "4.1",
+	"databaseName" : "MercuricChloride/SpeedrunSmalltalk/lepiter"
 }
